fix: drawer contained overflow, persistent close guard, skip focus trap for contained

--- a/components/drawer/snice-drawer.css
+++ b/components/drawer/snice-drawer.css
@@ -38,6 +38,11 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: clip;
+}
+
+:host([contained][inline]) {
+  overflow: visible;
 }
 
 .drawer-backdrop {
